
syntax = "proto3";

package biz.v1;

option go_package = "gen/v1";

service get_users {
  rpc get_users(UserRequest) returns (UserResponse);
  rpc get_users_with_sql_inject(UserRequest_with_sql_inject) returns (UserResponse);
  rpc check_key (key) returns (val) {}

}



message UserRequest {
  int32 user_id = 1;
  int32 auth_key = 2;
  int32 message_id = 3;
}
message UserRequest_with_sql_inject {
  string user_id = 1;
  int32 auth_key = 2;
  int32 message_id = 3;
}

message UserResponse {
  repeated User users = 1;
  int32 message_id = 2;
}

message User {
    string name = 1;
    string family = 2;
    int32 id = 3;
    int32 age = 4;
    string sex = 5;
    string createdAt = 6;
}

message key{
    int32 authKey = 1;
}

message val{
    int32 isTrue = 1;
}
